fixed collapse navbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,29 @@
-:root {
-  /* Colors */
-
-  /* Fonts */
-  --font-family-body: "Poppins", sans-serif;
-  --font-family-heading: "Raleway", sans-serif;
+body {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.home_container {
+  background-color: #FFC2C2;
+}
+
+.about_container {
+  background-color: #FF9D9D;
+}
+
+.benefits_container {
+  background-color: #FFC2C2;
+}
+
+.footer_container {
+  background-color: #010A43;
+}
+
+.navbar-nav>li {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.navbar-brand {
+  padding-left: 20px;
 }
